<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5FF"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEj1"
            android:text="@string/ir_ej1"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondeado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEj2"
            android:text="@string/ir_ej2"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondeado"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEj3"
            android:text="@string/ir_ej3"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondeado"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEj4"
            android:text="@string/ir_ej4"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondeado"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
