<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5FF"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnIniciar"
            android:text="@string/iniciar"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondeado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDetener"
            android:text="@string/detener"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondeado"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnVolver"
            android:text="@string/volver_inicio"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondeado"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
