<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5FF"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/contenedorCentrado"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtTexto"
            android:hint="@string/escribe_un_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#9C27B0"
            android:textColor="#000000"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnEnviar"
            android:text="@string/btn_enviar"
            android:textColor="@android:color/white"
            android:backgroundTint="#6A1B9A"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:padding="10dp"
            android:background="@drawable/boton_redondeado" />

        <Button
            android:id="@+id/btnSiguiente1"
            android:text="@string/siguiente"
            android:textColor="@android:color/white"
            android:backgroundTint="#6A1B9A"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:padding="10dp"
            android:background="@drawable/boton_redondeado" />
    </LinearLayout>
</RelativeLayout>
