<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5FF"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtTarea"
                android:hint="@string/escribe_un_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9C27B0"
                android:textColor="#000000"
                android:padding="12dp" />

            <Button
                android:id="@+id/btnAgregar"
                android:text="@string/btn_enviar"
                android:textColor="@android:color/white"
                android:background="@drawable/boton_redondeado"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ScrollView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/txtLista"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

            <Button
                android:id="@+id/btnSiguiente2"
                android:text="@string/siguiente"
                android:textColor="@android:color/white"
                android:background="@drawable/boton_redondeado"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
